--- a/src/interfaces/Email_Form.form
+++ b/src/interfaces/Email_Form.form
@@ -165,16 +165,16 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="toTxt">
+          <Properties>
+            <Property name="editable" type="boolean" value="false"/>
+            <Property name="text" type="java.lang.String" value="saman.g@sliit.lk"/>
+          </Properties>
           <Events>
             <EventHandler event="mouseReleased" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="toTxtMouseReleased"/>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="toTxtActionPerformed"/>
           </Events>
         </Component>
         <Component class="javax.swing.JTextField" name="fromTxt">
-          <Properties>
-            <Property name="editable" type="boolean" value="false"/>
-            <Property name="text" type="java.lang.String" value="ravindubandarasaluwadana@gmail.com"/>
-          </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="fromTxtActionPerformed"/>
           </Events>
